trying to fix momentum scrolling on ios.

--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -85,7 +85,8 @@
       box-sizing: content-box;
       width: 100%;
       height: calc(100vh - 68px);
-      overflow: auto;
+      overflow: scroll;
+      -webkit-overflow-scrolling: touch;
       scroll-behavior: smooth;
       // display: flex;
       // flex-direction: column;
